src/packages/danu/src/danu_fort_non-series.h

void data_read_float_f(const hid_t_ptr *sid, const char * name, const int *flen, const int *dim, const int * dimensions, float *data, int *ierr);
void data_read_double_f(const hid_t_ptr *sid, const char * name, const int *flen, const int *dim, const int * dimensions, double *data, int *ierr);