src/packages/danu/src/module_danu_iface.f90


interface
    subroutine data_read_float_f(ptr,data_name,flen,ndim,dims,r4data,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: ptr
    character(kind=C_CHAR),                     intent(in)  :: data_name(*)
    integer(kind=C_INT),                        intent(in)  :: flen
    integer(kind=C_INT),                        intent(in)  :: ndim
    integer(kind=C_INT),                        intent(in)  :: dims(*)
    real(kind=C_FLOAT),                         intent(out) :: r4data(*)
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine data_read_float_f
end interface

interface
    subroutine data_read_double0_f(ptr,data_name,flen,r8data,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: ptr
    character(kind=C_CHAR),                     intent(in)  :: data_name(*)
    integer(kind=C_INT),                        intent(in)  :: flen
    real(kind=C_DOUBLE),                        intent(out) :: r8data
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine data_read_double0_f
end interface

interface
    subroutine data_read_double_f(ptr,data_name,flen,ndim,dims,r8data,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: ptr
    character(kind=C_CHAR),                     intent(in)  :: data_name(*)
    integer(kind=C_INT),                        intent(in)  :: flen
    integer(kind=C_INT),                        intent(in)  :: ndim
    integer(kind=C_INT),                        intent(in)  :: dims(*)
    real(kind=C_DOUBLE),                        intent(out) :: r8data(*)
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine data_read_double_f
end interface

! --- Series Group access and control

interface
    subroutine sequence_exists_f(sptr, sname, slen, flag, ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: sptr
    character(kind=C_CHAR),                     intent(in)  :: sname(*)
    integer(kind=C_INT),                        intent(in)  :: slen
    integer(kind=C_INT),                        intent(out) :: flag
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine sequence_exists_f
end interface    

interface
    subroutine sequence_count_f(sptr, num, ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: sptr
    integer(kind=C_INT),                        intent(out) :: num
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine sequence_count_f
end interface 

interface 
    subroutine sequence_get_next_id_f(sptr,cyc,time,nptr,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                 intent(in)  :: sptr
    integer(kind=C_INT),                         intent(in)  :: cyc
    real(kind=C_DOUBLE),                         intent(in)  :: time
    type(C_PTR),                                 intent(out) :: nptr
    integer(kind=C_INT),                         intent(out) :: ierr
    end subroutine sequence_get_next_id_f
end interface 

interface
    subroutine sequence_list_f(ptr,names,name_len,name_size,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: ptr
    character(kind=C_CHAR),                     intent(out) :: names(*)
    integer(kind=C_INT),                        intent(in)  :: name_len
    integer(kind=C_INT),                        intent(in)  :: name_size
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine sequence_list_f
end interface  

interface
    subroutine sequence_get_id_f(sptr,sname,slen,nptr,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: sptr
    character(kind=C_CHAR),                     intent(in)  :: sname(*)
    integer(kind=C_INT),                        intent(in)  :: slen
    type(C_PTR),                                intent(out) :: nptr
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine sequence_get_id_f
end interface

interface
    subroutine sequence_get_id_bynum_f(sptr,num,nptr,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: sptr
    integer(kind=C_INT),                        intent(in)  :: num
    type(C_PTR),                                intent(out) :: nptr
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine sequence_get_id_bynum_f
end interface

! --- Series Data access and control

interface
    subroutine simulation_open_data_f(nptr,dname,dlen,dptr,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: nptr
    character(kind=C_CHAR),                     intent(in)  :: dname(*)
    integer(kind=C_INT),                        intent(in)  :: dlen
    type(C_PTR),                                intent(out) :: dptr
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine simulation_open_data_f
end interface    

interface
    subroutine simulation_data_exists_f(nptr,dname,dlen,flag,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: nptr
    character(kind=C_CHAR),                     intent(in)  :: dname(*)
    integer(kind=C_INT),                        intent(in)  :: dlen
    integer(kind=C_INT),                        intent(out) :: flag
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine simulation_data_exists_f
end interface    

interface
    subroutine simulation_data_count_f(nptr,cnt,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: nptr
    integer(kind=C_INT),                        intent(out) :: cnt
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine simulation_data_count_f
end interface

interface
    subroutine simulation_data_rank_f(nptr,dname,flen,rank,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: nptr
    character(kind=C_CHAR),                     intent(in)  :: dname(*)
    integer(kind=C_INT),                        intent(in)  :: flen
    integer(kind=C_INT),                        intent(out) :: rank 
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine simulation_data_rank_f
end interface

interface
    subroutine simulation_data_type_f(nptr,dname,flen,typecode,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: nptr
    character(kind=C_CHAR),                     intent(in)  :: dname(*)
    integer(kind=C_INT),                        intent(in)  :: flen
    integer(kind=C_INT),                        intent(out) :: typecode
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine simulation_data_type_f
end interface

interface
    subroutine simulation_data_dimensions_f(nptr,dname,flen,ndim,dims,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: nptr
    character(kind=C_CHAR),                     intent(in)  :: dname(*)
    integer(kind=C_INT),                        intent(in)  :: flen
    integer(kind=C_INT),                        intent(in)  :: ndim
    integer(kind=C_INT),                        intent(out) :: dims(*)
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine simulation_data_dimensions_f
end interface

interface
    subroutine simulation_data_list_f(ptr,names,name_len,name_size,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: ptr
    character(kind=C_CHAR),                     intent(out) :: names(*)
    integer(kind=C_INT),                        intent(in)  :: name_len
    integer(kind=C_INT),                        intent(in)  :: name_size
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine simulation_data_list_f
end interface  


interface
    subroutine simulation_data_write_int0_f(ptr,data_name,flen,idata,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: ptr
    character(kind=C_CHAR),                     intent(in)  :: data_name(*)
    integer(kind=C_INT),                        intent(in)  :: flen
    integer(kind=C_INT),                        intent(in)  :: idata
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine simulation_data_write_int0_f
end interface

interface
    subroutine simulation_data_write_int_f(ptr,data_name,flen,ndim,dims,idata,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: ptr
    character(kind=C_CHAR),                     intent(in)  :: data_name(*)
    integer(kind=C_INT),                        intent(in)  :: flen
    integer(kind=C_INT),                        intent(in)  :: ndim
    integer(kind=C_INT),                        intent(in)  :: dims(*)
    integer(kind=C_INT),                        intent(in)  :: idata(*)
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine simulation_data_write_int_f
end interface

interface
    subroutine simulation_data_write_float0_f(ptr,data_name,flen,rdata,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: ptr
    character(kind=C_CHAR),                     intent(in)  :: data_name(*)
    integer(kind=C_INT),                        intent(in)  :: flen
    real(kind=C_FLOAT),                         intent(in)  :: rdata
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine simulation_data_write_float0_f
end interface

interface
    subroutine simulation_data_write_float_f(ptr,data_name,flen,ndim,dims,rdata,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: ptr
    character(kind=C_CHAR),                     intent(in)  :: data_name(*)
    integer(kind=C_INT),                        intent(in)  :: flen
    integer(kind=C_INT),                        intent(in)  :: ndim
    integer(kind=C_INT),                        intent(in)  :: dims(*)
    real(kind=C_FLOAT),                         intent(in)  :: rdata(*)
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine simulation_data_write_float_f
end interface

interface
    subroutine simulation_data_write_double0_f(ptr,data_name,flen,rdata,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: ptr
    character(kind=C_CHAR),                     intent(in)  :: data_name(*)
    integer(kind=C_INT),                        intent(in)  :: flen
    real(kind=C_DOUBLE),                        intent(in)  :: rdata
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine simulation_data_write_double0_f
end interface

interface
    subroutine simulation_data_write_double_f(ptr,data_name,flen,ndim,dims,rdata,ierr) bind(c)
    use iso_c_binding
    type(C_PTR),                                intent(in)  :: ptr
    character(kind=C_CHAR),                     intent(in)  :: data_name(*)
    integer(kind=C_INT),                        intent(in)  :: flen
    integer(kind=C_INT),                        intent(in)  :: ndim
    integer(kind=C_INT),                        intent(in)  :: dims(*)
    real(kind=C_DOUBLE),                        intent(in)  :: rdata(*)
    integer(kind=C_INT),                        intent(out) :: ierr
    end subroutine simulation_data_write_double_f
end interface

